# miltr

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Readme.md  docker-compose.override.yaml  docker-compose.yml  release.sh  sendmail.txt
.github/workflows/: run-tests.yaml
client/: Cargo.toml  Readme.md
client/examples/: print.rs  print_client.rs
client/fuzz/: Cargo.toml
client/fuzz/fuzz_targets/: decoder.rs
client/src/: codec.rs  fuzzing.rs  lib.rs
common/: Cargo.toml  Readme.md
common/src/: decoding.rs  encoding.rs  error.rs  lib.rs
common/src/actions/: bidirectional.rs  mod.rs  quit.rs  to_mta_only.rs
common/src/commands/: body.rs  connect.rs  header.rs  helo.rs  mail.rs  mmacro.rs  mod.rs  recipient.rs  unknown.rs
common/src/modifications/: body.rs  headers.rs  mod.rs  quarantine.rs  recipients.rs
common/src/optneg/: capability.rs  macros.rs  mod.rs  protocol.rs
server/: .gitignore  Cargo.toml  Readme.md
server/examples/: basic_modifications.rs  catch_body.rs  print.rs  print_server.rs
server/fuzz/: Cargo.toml
server/fuzz/fuzz_targets/: decoder.rs
server/src/: codec.rs  fuzzing.rs  lib.rs  milter.rs
server/tests/: integration_test.rs
server/tests/postfix/config/: main.cf  transport
server/tests/utils/: mod.rs  smtpsink.rs  testcase.rs
src/: lib.rs
tests/: examples.rs
utils/: Cargo.toml  Readme.md
utils/src/: lib.rs
