[package]
name = "miltr-client"
version = "0.1.0"
edition = "2021"
readme = "Readme.md"
license = "MIT"
description = "A miltr client library in pure rust"

# MSRV is considered exempt from SemVer upgrades
# Current limitation is: "RPITIT Language Feature"
rust-version = "1.75.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
_fuzzing = []

[dependencies]
bitflags = "2.4.2"
enum_dispatch = "0.3.12"
futures = "0.3.30"
thiserror = "1.0.57"
asynchronous-codec = "0.7.0"
bytes = "1.5.0"
paste = "1.0.14"
miltr-common = { version = "0.1.0", path = "../common" }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = "deny"
module_name_repetitions = "allow"
cast-possible-truncation = "allow"

[dev-dependencies]
miette = { version = "7.1.0", features = ["fancy"] }
tokio = { version = "1.36.0", features = ["net", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
