[package]
name = "miltr-server"
version = "0.1.0"
edition = "2021"
readme = "../Readme.md"
license = "MIT"
description = "A miltr server library in pure rust"

# MSRV is considered exempt from SemVer upgrades
# Current limitation is: "async-dropper-simple"
rust-version = "1.71.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
_fuzzing = []

[dependencies]
async-trait = "0.1.77"
asynchronous-codec = "0.7.0"
bytes = "1.5.0"
futures = "0.3.30"
miltr-common = { version = "0.1.0", path = "../common" }
miltr-utils = { version = "0.1.0", path = "../utils" }
thiserror = "1.0.57"

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
pedantic = "deny"
module_name_repetitions = "allow"
cast-possible-truncation = "allow"

[dev-dependencies]
async-dropper = { version = "0.3.1", features = ["tokio", "simple"] }
async-trait = "0.1.77"
miette = { version = "7.1.0", features = ["fancy"] }
once_cell = "1.19.0"
tokio = { version = "1.36.0", features = ["full"] }
tokio-retry = "0.3.0"
tokio-util = { version = "0.7.10", features = ["compat"] }
