[package]
name = "miltr-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
asynchronous-codec = "0.7.0"
bytes = "1.5.0"
libfuzzer-sys = "0.4"
miltr-common = { version = "0.1.0", path = "../../common" }
miltr-client = { version = "0.1.0", path = "..", features = ["_fuzzing"]}

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decoder"
path = "fuzz_targets/decoder.rs"
test = false
doc = false
